# DynaMode

./: .gitignore  .publicsyncignore  README.md  dynamode.yaml  pyproject.toml
configs/: spec_conv_displacement_ca_shake.yaml  spec_conv_displacement_ca_unit_var.yaml  transformer_displacement_ca.yaml
src/: zarr_feature_extraction.py
src/disco/: inference.py  train.py  utils.py
src/disco/dataloader/: features.py  raw_loader.py  zarr_loader.py
src/disco/eval/: summarise.py
src/disco/minimiser/: __init__.py  ca.py
src/disco/minimiser/params/: mdcath_ca.yaml
src/disco/model/: adapters.py  conditioned_freq_scale.py  diffusion.py  mask.py  model_wrapper.py  modules.py  noise_schedule.py  registry.py  shake.py
src/disco/model/spec_conv/: block_mix.py  (+2 more)
src/disco/spectral/: __init__.py  adapters.py  representation.py
src/dynamode/: inference.py  train.py  utils.py
src/dynamode/dataloader/: features.py  raw_loader.py  zarr_loader.py
src/dynamode/eval/: evaluation.py
src/dynamode/minimiser/: __init__.py  ca.py
src/dynamode/model/: adapters.py  diffusion.py  frequency_bands.py  modules.py  noise_schedule.py  shake.py  stack.py  wrapper.py
src/dynamode/spectral/: __init__.py  adapters.py  aliases.py  conditioned_freq_scale.py  representation.py
src/scripts/: download_atlas.py  download_mdcath.py  extract_atlas_features_to_zarr.py  extract_mdcath_features_to_zarr.py
tests/: test_ca_minimiser.py  test_conditioned_freq_scale.py  test_mdcath_models.py  test_sequence_conditioning.py  test_spec_conv_regressions.py
tests/data_tests/: test_dataloaders_zarr.py
(+10 files in other folders)
