[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamode"
version = "0.1.0"
description = "Spectral diffusion models for generative protein dynamics."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "DynaMode contributors" },
]
dependencies = [
  "h5py>=3.8",
  "huggingface-hub>=0.20",
  "hydra-core>=1.3",
  "mdtraj>=1.9",
  "numcodecs>=0.11,<0.16",
  "numpy>=1.24",
  "omegaconf>=2.3",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "torch>=2.1",
  "tqdm>=4.66",
  "wandb>=0.16",
  "zarr>=2.16,<3",
]

[project.optional-dependencies]
eval = [
  "matplotlib>=3.7",
  "pandas>=2.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.urls]
Paper = "https://openreview.net/forum?id=0Cy0I8B9O2"

[project.scripts]
dynamode-train = "dynamode.train:main"
dynamode-infer = "dynamode.inference:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["dynamode*"]
namespaces = true

[tool.setuptools.package-data]
"dynamode.minimiser" = ["params/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
